jitfailure-dolfin_expression_7c0f7a02651a17af02908aab67a685f3/error.log
/tmp/tmpek44xk33/dolfin_expression_7c0f7a02651a17af02908aab67a685f3.cpp: In member function ‘virtual void dolfin::dolfin_expression_7c0f7a02651a17af02908aab67a685f3::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpek44xk33/dolfin_expression_7c0f7a02651a17af02908aab67a685f3.cpp:64:2: error: expected identifier before numeric constant
   64 | [0.0, 3.5e+19, 7.0e+19, 1.05e+20, 1.4e+20, 1.75e+20, 2.1e+20, 2.45e+20, 2.8e+20, 3.15e+20, 3.5e+20, 3.85e+20, 4.2e+20, 4.55e+20, 4.9e+20, 5.25e+20, 5.6e+20, 5.95e+20, 6.3e+20, 6.65e+20, 7.0e+20, 7.35e+20, 7.7e+20, 8.05e+20, 8.4e+20, 8.75e+20, 9.1e+20, 9.45e+20, 9.8e+20, 1.015e+21, 1.05e+21, 1.085e+21, 1.12e+21, 1.155e+21, 1.19e+21, 1.225e+21, 1.26e+21, 1.295e+21, 1.33e+21, 1.365e+21, 1.4e+21, 1.435e+21, 1.47e+21, 1.505e+21, 1.54e+21, 1.575e+21, 1.61e+21, 1.645e+21, 1.68e+21, 1.715e+21, 1.75e+21, 1.785e+21, 1.82e+21, 1.855e+21, 1.89e+21, 1.925e+21, 1.96e+21, 1.995e+21, 2.03e+21, 2.065e+21, 2.1e+21, 2.135e+21, 2.17e+21, 2.205e+21, 2.24e+21, 2.275e+21, 2.31e+21, 2.345e+21, 2.38e+21, 2.415e+21, 2.45e+21, 2.485e+21, 2.52e+21, 2.555e+21, 2.59e+21, 2.625e+21, 2.66e+21, 2.695e+21, 2.73e+21, 2.765e+21, 2.8e+21, 2.835e+21, 2.87e+21, 2.905e+21, 2.94e+21, 2.975e+21, 3.01e+21, 3.045e+21, 3.08e+21, 3.115e+21, 3.15e+21, 3.185e+21, 3.22e+21, 3.255e+21, 3.29e+21, 3.325e+21, 3.36e+21, 3.395e+21, 3.43e+21, 3.465e+21];
      |  ^~~
/tmp/tmpek44xk33/dolfin_expression_7c0f7a02651a17af02908aab67a685f3.cpp:64:5: error: expected ‘]’ before ‘,’ token
   64 | [0.0, 3.5e+19, 7.0e+19, 1.05e+20, 1.4e+20, 1.75e+20, 2.1e+20, 2.45e+20, 2.8e+20, 3.15e+20, 3.5e+20, 3.85e+20, 4.2e+20, 4.55e+20, 4.9e+20, 5.25e+20, 5.6e+20, 5.95e+20, 6.3e+20, 6.65e+20, 7.0e+20, 7.35e+20, 7.7e+20, 8.05e+20, 8.4e+20, 8.75e+20, 9.1e+20, 9.45e+20, 9.8e+20, 1.015e+21, 1.05e+21, 1.085e+21, 1.12e+21, 1.155e+21, 1.19e+21, 1.225e+21, 1.26e+21, 1.295e+21, 1.33e+21, 1.365e+21, 1.4e+21, 1.435e+21, 1.47e+21, 1.505e+21, 1.54e+21, 1.575e+21, 1.61e+21, 1.645e+21, 1.68e+21, 1.715e+21, 1.75e+21, 1.785e+21, 1.82e+21, 1.855e+21, 1.89e+21, 1.925e+21, 1.96e+21, 1.995e+21, 2.03e+21, 2.065e+21, 2.1e+21, 2.135e+21, 2.17e+21, 2.205e+21, 2.24e+21, 2.275e+21, 2.31e+21, 2.345e+21, 2.38e+21, 2.415e+21, 2.45e+21, 2.485e+21, 2.52e+21, 2.555e+21, 2.59e+21, 2.625e+21, 2.66e+21, 2.695e+21, 2.73e+21, 2.765e+21, 2.8e+21, 2.835e+21, 2.87e+21, 2.905e+21, 2.94e+21, 2.975e+21, 3.01e+21, 3.045e+21, 3.08e+21, 3.115e+21, 3.15e+21, 3.185e+21, 3.22e+21, 3.255e+21, 3.29e+21, 3.325e+21, 3.36e+21, 3.395e+21, 3.43e+21, 3.465e+21];
      |     ^
/tmp/tmpek44xk33/dolfin_expression_7c0f7a02651a17af02908aab67a685f3.cpp: In lambda function:
/tmp/tmpek44xk33/dolfin_expression_7c0f7a02651a17af02908aab67a685f3.cpp:64:5: error: expected ‘{’ before ‘,’ token
/tmp/tmpek44xk33/dolfin_expression_7c0f7a02651a17af02908aab67a685f3.cpp: In member function ‘virtual void dolfin::dolfin_expression_7c0f7a02651a17af02908aab67a685f3::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpek44xk33/dolfin_expression_7c0f7a02651a17af02908aab67a685f3.cpp:64:5: error: cannot convert ‘dolfin::dolfin_expression_7c0f7a02651a17af02908aab67a685f3::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const::<lambda()>’ to ‘Eigen::DenseCoeffsBase<Eigen::Ref<Eigen::Matrix<double, -1, 1> >, 1>::Scalar’ {aka ‘double’} in assignment
